5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1756_1576.log
== SUBMITION (2019-05-27 15:05:21) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

cp=0
ve=0
vb=0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c]== pedra and v2[c]== tesoura):
		ve=ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c]== pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c]== tesoura):
		vb=vb+1
   elif(v1[c]==tesoura and v2[c]== papel):
		ve=ve+1
	elif(v1[c]==tesoura and v2[c]== pedra):
		vb=vb+1
		
cp=cp+1

print(size(v1))
	if(ve>vb):
		print(eu)
	elif(vb>ve):
		print(ba)
	else:
		print(em)
		
		
    
		



-- EXECUTION TIME:
0.187836
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 27
    elif(v1[c]==tesoura and v2[c]== papel):
                                          ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:05:24) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

cp=0
ve=0
vb=0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c]== pedra and v2[c]== tesoura):
		ve=ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c]== pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c]== tesoura):
		vb=vb+1
   elif(v1[c]==tesoura and v2[c]== papel):
		ve=ve+1
	elif(v1[c]==tesoura and v2[c]== pedra):
		vb=vb+1
		
cp=cp+1

print(size(v1))
	if(ve>vb):
		print(eu)
	elif(vb>ve):
		print(ba)
	else:
		print(em)
		
		
    
		



-- ERROR:
File "XXXX", line 27
    elif(v1[c]==tesoura and v2[c]== papel):
                                          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:07:37) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

cp=0
ve=0
vb=0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c]== pedra and v2[c]== tesoura):
		ve=ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c]== pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c]== tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):	
   
	elif(v1[c]==tesoura and v2[c]== pedra):
		vb=vb+1
		
cp=cp+1

print(size(v1))
	if(ve>vb):
		print(e)
	elif(vb>ve):
		print(ba)
	else:
		print(em)
		
		
    
		



-- ERROR:
File "XXXX", line 29
    elif(v1[c]==tesoura and v2[c]== pedra):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:09:29) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

cp=0
ve=0
vb=0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c]== pedra and v2[c]== tesoura):
		ve=ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c]== pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c]== tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
cp=cp+1

print(size(v1))
	if(ve>vb):
		print(e)
	elif(vb>ve):
		print(ba)
	else:
		print(em)
		
		
    
		



-- ERROR:
File "XXXX", line 36
    if(ve>vb):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:10:22) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

cp=0
ve=0
vb=0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c]== pedra and v2[c]== tesoura):
		ve=ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
cp=cp+1

 print(size(v1))
   if(ve>vb):
		print(e)
	elif(vb>ve):
		print(ba)
	else:
		print(em)
		
		
    
		



-- ERROR:
File "XXXX", line 35
    print(size(v1))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:10:28) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

cp=0
ve=0
vb=0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c]== pedra and v2[c]== tesoura):
		ve=ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
cp=cp+1

print(size(v1))
   if(ve>vb):
		print(e)
	elif(vb>ve):
		print(ba)
	else:
		print(em)
		
		
    
		



-- ERROR:
File "XXXX", line 36
    if(ve>vb):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:10:36) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

cp=0
ve=0
vb=0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c]== pedra and v2[c]== tesoura):
		ve=ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
cp=cp+1

print(size(v1))
  if(ve>vb):
		print(e)
	elif(vb>ve):
		print(ba)
	else:
		print(em)
		
		
    
		



-- EXECUTION TIME:
0.210944
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 36
    if(ve>vb):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:10:38) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

cp=0
ve=0
vb=0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c]== pedra and v2[c]== tesoura):
		ve=ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
cp=cp+1

print(size(v1))
  if(ve>vb):
		print(e)
	elif(vb>ve):
		print(ba)
	else:
		print(em)
		
		
    
		



-- ERROR:
File "XXXX", line 36
    if(ve>vb):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:12:26) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

cp=0
ve=0
vb=0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c]== pedra and v2[c]== tesoura):
		ve=ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
	cp=cp+1

print(size(v1))
if(ve>vb):
   print(eu)
elif(vb>ve):
	print(ba)
else:
	print(em)
		
		
    
		



-- EXECUTION TIME:
0.28222
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 18, in <module>
    while(c<size(v1)):
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:12:28) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

cp=0
ve=0
vb=0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c]== pedra and v2[c]== tesoura):
		ve=ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
	cp=cp+1

print(size(v1))
if(ve>vb):
   print(eu)
elif(vb>ve):
	print(ba)
else:
	print(em)
		
		
    
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:13:30) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

cp=0
ve=0
vb=0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c]== pedra and v2[c]== tesoura):
		ve=ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
	cp=cp+1

print(size(v1))
if(ve>vb):
   print(eu)
elif(vb>ve):
	print(ba)
else:
	print(em)
		
		
    
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:14:05) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

cp=0
ve=0
vb=0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(cp<size(v1)):
	if(v1[c]== pedra and v2[c]== tesoura):
		ve=ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
	cp=cp+1

print(size(v1))
if(ve>vb):
   print(eu)
elif(vb>ve):
	print(ba)
else:
	print(em)
		
		
    
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:14:32) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

c=0
ve=0
vb=0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c]== pedra and v2[c]== tesoura):
		ve=ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
	c=c+1

print(size(v1))
if(ve>vb):
   print(eu)
elif(vb>ve):
	print(ba)
else:
	print(em)
		
		
    
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:15:15) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

c=0
ve=0
vb=0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == tesoura):
		ve = ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
	c=c+1

print(size(v1))
if(ve>vb):
   print(eu)
elif(vb>ve):
	print(ba)
else:
	print(em)
		
		
    
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:15:47) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

c  = 0
ve = 0
vb = 0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == tesoura):
		ve = ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
	c=c+1

print(size(v1))
if(ve>vb):
   print(eu)
elif(vb>ve):
	print(ba)
else:
	print(em)
		
		
    
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:15:52) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

c  = 0
ve = 0
vb = 0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == tesoura):
		ve = ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
	c=c+1

print(size(v1))
if(ve>vb):
   print(eu)
elif(vb>ve):
	print(ba)
else:
	print(em)
		
		
    
		



-- EXECUTION TIME:
0.522935
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:17:09) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

c  = 0
ve = 0
vb = 0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == tesoura):
		ve = ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
	c=c+1

print(size(v1))
if(ve>vb):
   print(eu)
elif(vb>ve):
	print(ba)
else:
	print(em)
		
		
    
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:17:20) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

c  = 0
ve = 0
vb = 0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == tesoura):
		ve = ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
	c=c+1

print(size(v1))
if(ve>vb):
   print(eu)
elif(vb>ve):
	print(ba)
else:
	print(em)
		
		
    
		



-- EXECUTION TIME:
0.610158
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:17:23) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

c  = 0
ve = 0
vb = 0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == tesoura):
		ve = ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
	c=c+1

print(size(v1))
if(ve>vb):
   print(eu)
elif(vb>ve):
	print(ba)
else:
	print(em)
		
		
    
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:17:39) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

c  = 0
ve = 0
vb = 0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == tesoura):
		ve = ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
	c=c+1

print(size(v1))
if(ve>vb):
   print(eu)
elif(vb>ve):
	print(ba)
else:
	print(em)
		
		
    
		



-- EXECUTION TIME:
0.581801
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:34:19) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

c  = 0
ve = 0
vb = 0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == tesoura):
		ve = ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
	c=c+1

print(size(v1))
if(ve>vb):
   print(eu)
elif(vb>ve):
	print(ba)
else:
	print(em)
		
		
    
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:34:23) 
-- CODE:
from numpy import*

v1= array(eval(input("v1:")))
v2= array(eval(input("v2:")))

pedra=11
papel=22
tesoura=33

c  = 0
ve = 0
vb = 0

eu = "EUSAPIA"
ba = "BARSANULFO"
em =  "EMPATE"

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == tesoura):
		ve = ve+1
	elif(v1[c]== pedra and v2[c]== papel):
		vb=vb+1
	elif(v1[c]==papel and v2[c] == pedra):
		ve=ve+1
	elif(v1[c]==papel and v2[c] == tesoura):
		vb=vb+1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve=ve+1
	elif(v1[c] == tesoura and v2[c] == pedra):	
		vb=vb+1
   
		
	c=c+1

print(size(v1))
if(ve>vb):
   print(eu)
elif(vb>ve):
	print(ba)
else:
	print(em)
		
		
    
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
